--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ main ]  # Runs on pushes to main branch
+    branches: [ main ]
 
 jobs:
   deploy:
@@ -13,26 +13,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Inject Supabase secrets
-      - name: Create config file
+      # 2. Create config file in root (not /dist)
+      - name: Create Supabase config
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
-          echo "export const SUPABASE_CONFIG = {
+          echo "const SUPABASE_CONFIG = {
             url: '$SUPABASE_URL',
             key: '$SUPABASE_KEY'
           };" > config.js
 
-      # 3. Install and build (example for Node.js)
-      - name: Install and build
-        run: |
-          npm install
-          npm run build
-
-      # 4. Deploy to GitHub Pages
+      # 3. Deploy entire repo (or specific folder)
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist  # Adjust to your build folder
+          publish_dir: ./  # Deploys root folder (or use ./dist if you have one)
