--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
         run: |
-          echo "const SUPABASE_CONFIG = {
+          echo "export const SUPABASE_CONFIG = {
             url: '$SUPABASE_URL',
             key: '$SUPABASE_KEY'
           };" > config.js
