--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
           echo "export const CONFIG = {" > config.js
           echo "  url: '${{ secrets.SUPABASE_URL }}'," >> config.js
           echo "  key: '${{ secrets.SUPABASE_KEY }}'" >> config.js
-          echo "};" >> public/config.js
+          echo "};" >> config.js
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./
